Fix Audrey and Patricio photo positioning - shift down to prevent head cutoff

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1620,7 +1620,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .member-photo img.audrey-photo {
     transform: scale(1.3);
-    object-position: center 70%;
+    object-position: center 50%;
 }
 
 /* Executive Board photos */
@@ -1691,8 +1691,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .member-photo img.patricio-photo {
-    transform: scale(1.0);
-    object-position: center 75%;
+    transform: scale(0.95);
+    object-position: center 40%;
 }
 
 .member-photo img.sabrina-photo {
